assets and lights and stuff

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -86,8 +86,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="SevenPressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
 +ActionMappings=(ActionName="EightPressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Eight)
 +ActionMappings=(ActionName="NinePressed",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Nine)
-DefaultPlayerInputClass=/Script/Engine.PlayerInput
-DefaultInputComponentClass=/Script/Engine.InputComponent
+DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
+DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
